--- a/static/css/page.css
+++ b/static/css/page.css
@@ -330,6 +330,7 @@ code {
   padding-right: 0.2em;
   padding-top: 0.05em;
   padding-bottom: 0.3em;
+  overflow-x: scroll;
 }
 
 code.hljs {
